Fix dark mode

--- a/assets/uts-style.css
+++ b/assets/uts-style.css
@@ -590,7 +590,7 @@ figure {
     animation: breathing 2s ease-out infinite;
 }
 
-:root[data-applied-mode="dark"] .typst-root {
+:root[data-applied-mode="dark"] .typst-root, :root[data-applied-mode="dark"] .pikchr-root {
     filter: invert(1.0);
 }
 
